style: update landing image, fix about spacing

--- a/src/pages/mainPage/MainPage.module.sass
+++ b/src/pages/mainPage/MainPage.module.sass
@@ -64,7 +64,7 @@
 
 .about
   flex-wrap: wrap
-  justify-content: space-between
+  justify-content: space-between !important
 
   &__title
     width: 100%
